syntax = "proto3";

package pb;

option go_package = "bitmoi/backend/gapi/pb";

import "validate/validate.proto";

message GetCandlesRequest{
	string names = 1;
	string mode = 2 [(validate.rules).string = {in: ["practice","competition"]}];
}

message GetCandlesResponse{
	string name = 1;
	CandleData onechart = 2;
	double btcratio = 3;
	string entrytime = 4;
	string identifier = 5;
}

message CandleData {
	repeated PriceData pData = 1;
	repeated VolumeData vData = 2;
}

message PriceData {
	double open = 1;
	double close = 2;
	double high = 3;
	double low  = 4;
	int64 time = 5;
}

message VolumeData {
	double value = 1;
	int64 time = 2;
	string color = 3;
}