syntax = "proto3";

package pb;

option go_package = "bitmoi/backend/gapi/pb";

import "candles.proto";

message OrderRequest {
    string mode = 1;
    string user_id = 2;
    string name = 3;
    int32 stage = 4;
	bool is_long = 5;
	double entry_price = 6 ;
	double quantity = 7 ;
	double profit_price  = 9 ;
	double loss_price  = 10 ;
	int32 leverage = 11;
	double balance  = 12 ;
    string identifier = 13 ;
    string score_id = 14 ;
    int32 waiting_term = 15;
}

message OrderResponse {
	CandleData origin_chart = 1;
	CandleData result_chart = 2;
	Score score = 3;
}

message Score {
    int32 stage = 1;
    string name = 2;
    string entrytime = 3;
	int32 leverage = 4;
	double entry_price = 5;
	double end_price = 6;
	int32 out_time = 7;
	double roe = 8;
	double pnl  = 9;
	double commission  = 10;
	bool is_liquidated  = 11;
}